--- a/NetCore/Dapper.Extensions.Linq/Dapper.Extensions.Linq.csproj
+++ b/NetCore/Dapper.Extensions.Linq/Dapper.Extensions.Linq.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
     <PackageReference Include="MySql.Data" Version="7.0.7-m61" />
   </ItemGroup>
 
